Bug 170389 - FILESAVE DOCX: corrupt document reported by MS Word is w:tabs contains more than 64 entries
Summary: FILESAVE DOCX: corrupt document reported by MS Word is w:tabs contains more t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: bibisected, filter:docx
Depends on:
Blocks: DOC-Corrupted
  Show dependency treegraph
 
Reported: 2026-01-19 16:34 UTC by Justin L
Modified: 2026-01-22 15:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2026-01-19 16:34:12 UTC
Steps to reproduce in LibreOffice:
-open attachment 165439 [details] ('RPH Handbook Slip1.docx' from bug 136705)
-save as DOCX
-try to open with MS Word

I'm sure we could manufacture an example that points back to OOo 3.3, but for this particular document we can bibisect it to 6.2
commit 2bc84658cce1df5050fe788dd0c8a0906a1ca2c3   -- NO TDF#
Author: Justin Luth on Wed Jul 18 07:37:41 2018 +0200
    related tdf#63561 docx: styles inherit tabstops too
    Reviewed-on: https://gerrit.libreoffice.org/57278
which recognised that tabs can be inherited from multiple styles, and thus made more likely an existing limitation.
Comment 1 Commit Notification 2026-01-20 02:58:39 UTC
justin.luth@collabora.com committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/74f914f3db9a860c60982c0e5dc5fe7d0c521a07

tdf#170389 docx export: nCount already known to be > 0

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2026-01-20 02:58:42 UTC
justin.luth@collabora.com committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8b72d104ad32171ab637fc83c6f942a930b69e1

tdf#170389 docx export: limit w:tabs to 64 entries

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-20 12:31:11 UTC
justin.luth@collabora.com committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3e82cc18c6c61dfb3906631d311351355a476a0

tdf#170389 docx export: don't spam inherited tabstops

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-22 13:09:12 UTC
justin.luth@collabora.com committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/34a977af1ef7ae48604a879bf3a47b4d03b0c2c9

tdf#170389 docx export: limit w:tabs to 64 entries

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-01-22 15:07:44 UTC
justin.luth@collabora.com committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/cdbebd3086498673ee5b668e3aaeb5c90674825f

tdf#170389 docx export: don't spam inherited tabstops

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.