tdf#170389 docx export: limit w:tabs to 64 entries

Files with more than 64 tabstops are reported as corrupt
by MS Word.

Exposed by 6.2 commit 2bc84658cce1df5050fe788dd0c8a0906a1ca2c3
Author: Justin Luth on Wed Jul 18 07:37:41 2018 +0200
    related tdf#63561 docx: styles inherit tabstops too
    Reviewed-on: https://gerrit.libreoffice.org/57278

Probably dedup needs to happen here,
since AFAICS we accumulate the inherited tabs
in each successive inherted style/paragraph.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf170389_manyTabstops

Change-Id: I2fa356184e5322f9483678c9a50ae6ce96599920
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197606
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197660
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>